# Themiify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: App.cpp  App.h  Camera.cpp  ContentPanel.cpp  ContentPanel.h  DownloadManager.cpp  DownloadManager.h  ImageLoader.cpp  ImageLoader.h  NavBar.cpp  NavBar.h  PluginManager.cpp  PluginManager.h  ThemeManager.cpp  ThemeManager.h  ThemezerAPI.cpp  ThemezerAPI.h  UI.cpp  UI.h  Zip.cpp  Zip.h  async_queue.hpp  graphql.cpp  graphql.h  imgui_extras.cpp  imgui_extras.hpp  installer.cpp  installer.h  main.cpp  string_utils.cpp  string_utils.hpp  thread_safe.hpp  timer.cpp  timer.hpp  utils.cpp  utils.h
src/screens/: ConfirmExitPopup.cpp  ConfirmExitPopup.h  DeleteThemePopup.cpp  DeleteThemePopup.h  DownloadScreen.cpp  DownloadThemePopup.cpp  DownloadThemePopup.h  HomeScreen.cpp  HomeScreen.h  InstallThemePopup.cpp  InstallThemePopup.h  InstalledScreen.cpp  ManageThemesScreen.cpp  ManageThemesScreen.h  QRCodePopup.cpp  QRCodePopup.h  SettingsPopup.cpp  SettingsPopup.h  SettingsScreen.cpp  SettingsScreen.h  ThemeDetailsPopup.cpp  ThemeDetailsPopup.h  ThemePreviewPopup.cpp  ThemePreviewPopup.h  ThemezerScreen.cpp  ThemezerScreen.h
